fixed sub-menu z-index, floating header problem etc.

--- a/theme/boilerplate/_menu/pc/community/menu.scss
+++ b/theme/boilerplate/_menu/pc/community/menu.scss
@@ -139,6 +139,7 @@ body.colorset-dark {
             .submenu-wrap {
                 right: 0;
                 left: auto;
+                z-index: 2000; 
             }
         }
     }
